# lucasGarage

./: .env.example  .gitignore  ANALISE_PROFUNDA.md  AUDITORIA.md  AUDITORIA_VISUAL.md  DEPLOY_PYTHONANYWHERE.md  ENVIAR_GITHUB.md  ENVIAR_GITHUB.txt  GITHUB_SETUP.md  PROJETO_PRONTO.md  QUICKSTART.md  README.md  README_IMPLEMENTACAO.md  RESUMO_CORRECOES.txt  ROADMAP_VISUAL.md  SETUP_GUIA.md  TESTE_CORRECOES.md  TUTORIAL_VIDEO_LUCAS.md  UI_UX_ULTIMATE_AUDIT.md  alembic.ini  backup_db.py  check_endpoints.py  download_logos.py  enriquecer_wikidata.py  fetch_manufacturers.py  fichas_carros.py  import_images.py  import_photos.py  init_db.py  organize_photos.py  publicar_todas.py  pyproject.toml  requirements.txt  reset_data.py  seed_from_photos.py  seed_montadoras.py  test_api.py  update_logos.py
alembic/: env.py
scripts/: create_tables.py  fix_urls.py  identify_cars_ai.py  import_images.py  init_data.py
src/: __init__.py  main.py
src/api/: __init__.py  cars_api.py
src/core/: __init__.py  config.py  entities.py  interfaces.py  logos.py  montadoras.py
src/infra/: __init__.py  database.py  repositories.py
src/schemas/: __init__.py
src/services/: __init__.py  ai_vision_service.py  card_image.py  manufacturer_image_service.py  ocr_service.py  wikipedia.py
src/static/sounds/: LEIA-ME.md
src/templates/: base.html  dashboard.html
src/templates/pages/: catalogo.html  dashboard.html  detail.html  edit.html  edit_car.html  estatisticas.html  jogo_online.html  login.html  quiz.html  super_trunfo.html  vitrine.html
src/utils/: generators.py
